--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
     "@expo/webpack-config": "^18.0.1",
+    "dom-to-image": "^2.6.0",
     "expo": "~48.0.18",
     "expo-constants": "~14.2.1",
     "expo-image-picker": "~14.1.1",
     "expo-linking": "~4.0.1",
+    "expo-media-library": "~15.2.3",
     "expo-router": "^1.0.0",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
@@ -24,6 +26,7 @@
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
+    "react-native-view-shot": "3.5.0",
     "react-native-web": "~0.18.10"
   },
   "devDependencies": {
